# heap-sentry

./: .gitignore  Cargo.toml  README.md
docs/: enhancement_proposals.md  how_it_works.md  re md
examples/: backtrace_example.rs  growth_example.rs  json_output_example.rs  leak_example.rs  scoped_example.rs  threaded_example.rs
src/: allocator.rs  analysis.rs  config.rs  lib.rs  metrics.rs  scope.rs
tests/: examples.rs  integration_scenarios.rs  unit_api.rs  unit_metrics.rs
tests/helpers/: mod.rs
