[package]
name = "heap-sentry"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = { version = "0.3", optional = true }
lazy_static = "1.4"
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

[features]
default = []
backtrace = ["dep:backtrace"]
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]